# metal-profiler

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
metal_profiler/: __init__.py  _applegpu.py  _disassemble.py  cost_model.py  extract.py  metal_profile.py  profiler.py
metal_profiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: metal_profile.py  profiler.py
test/: matmul.metal
